tests/toy/neg/001307_mutation.toylang
program a = { var bool a : bool; } .
